# minha-API-robusta

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
api_pedidos/: api.py  magalu_api.py  schema.py
tests/: test_api.py
