[tool.poetry]
name = "minha-api-robusta"
version = "0.0.0"
description = "Exercício do curso do Cássio Botaro Construindo APIs Robustas, como deve ser."
authors = ["Kyle Felipe Vieira Roberto <kylefelipe@gmail.com>"]
readme = "README.md"
packages = [{include = "minha_api_robusta"}]

[tool.isort]
profile = "black"
line_length = 79

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = "^0.95.2"
httpx = "^0.24.1"
uvicorn = "^0.22.0"


[tool.poetry.group.dev.dependencies]
httpie = "^3.2.2"
pytest = "^7.3.1"
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
